--- a/MostViewedArticles/app/src/main/res/layout-w900dp/article_list.xml
+++ b/MostViewedArticles/app/src/main/res/layout-w900dp/article_list.xml
@@ -17,17 +17,25 @@
     
     -->
 
-    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/article_list"
-        android:name="com.scrpn.mostviewedarticles.ArticleListFragment"
-        android:layout_width="@dimen/item_width"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:layoutManager="LinearLayoutManager"
-        tools:context="com.scrpn.mostviewedarticles.ArticleListActivity"
-        tools:listitem="@layout/article_list_content" />
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/article_list"
+            android:name="com.scrpn.mostviewedarticles.ArticleListFragment"
+            android:layout_width="@dimen/item_width"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            app:layoutManager="LinearLayoutManager"
+            tools:context="com.scrpn.mostviewedarticles.ArticleListActivity"
+            tools:listitem="@layout/article_list_content" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <FrameLayout
         android:id="@+id/article_detail_container"
