--- a/MostViewedArticles/app/src/main/res/layout/activity_article_detail.xml
+++ b/MostViewedArticles/app/src/main/res/layout/activity_article_detail.xml
@@ -48,6 +48,6 @@
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@+id/article_detail_container"
         app:layout_anchorGravity="top|end"
-        app:srcCompat="@android:drawable/ic_dialog_info" />
+        app:srcCompat="@drawable/ic_link_white_48dp" />
 
 </android.support.design.widget.CoordinatorLayout>
