--- a/MostViewedArticles/app/src/main/res/layout/article_list_content.xml
+++ b/MostViewedArticles/app/src/main/res/layout/article_list_content.xml
@@ -22,22 +22,19 @@
         <TextView
             android:id="@+id/list_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/list_byline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#aaaaaa"
-            android:layout_margin="@dimen/text_margin" />
+            android:textColor="@color/colorGreyText" />
 
         <TextView
             android:id="@+id/list_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textColor="#aaaaaa"
+            android:textColor="@color/colorGreyText"
             android:layout_gravity="right"/>
 
     </LinearLayout>
