Minor design improvements

--- a/MostViewedArticles/app/src/main/res/layout/article_list_content.xml
+++ b/MostViewedArticles/app/src/main/res/layout/article_list_content.xml
@@ -9,6 +9,7 @@
         android:id="@+id/imageView"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginLeft="8dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true" />
 
@@ -16,6 +17,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginLeft="16dp"
         android:layout_toRightOf="@+id/imageView"
         android:layout_toLeftOf="@+id/imageView2">
 
