Minor design improvements

--- a/MostViewedArticles/app/src/main/res/layout/article_list_content.xml
+++ b/MostViewedArticles/app/src/main/res/layout/article_list_content.xml
@@ -47,5 +47,5 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        app:srcCompat="@android:drawable/ic_media_play" />
+        app:srcCompat="@drawable/ic_keyboard_arrow_right_black_48dp" />
 </RelativeLayout>
